--- a/tp2/CMakeLists.txt
+++ b/tp2/CMakeLists.txt
@@ -3,5 +3,5 @@ project(tp2)
 
 set(CMAKE_C_STANDARD 99)
 
-set(SOURCE_FILES serveur.c)
+set(SOURCE_FILES serveur.c client.c)
 add_executable(tp2 ${SOURCE_FILES})
